--- a/styles/components/sidebar.scss
+++ b/styles/components/sidebar.scss
@@ -16,6 +16,11 @@
         white-space: nowrap;
         padding: 10px 25px 10px 15px;
         font-size: 12px;
+
+        .sidebar-collapsed & {
+          display: none !important;
+          -webkit-transform: translateZ(0);
+        }
       }
 
       &.active,
